fix: fix the bug which is style of too long account name

--- a/src/ui/style/mixin.less
+++ b/src/ui/style/mixin.less
@@ -42,6 +42,10 @@
   color: #ffffff;
 }
 
+.hide {
+  display: none;
+}
+
 .notice {
   width: 100%;
   background: rgba(255, 168, 0, 0.04);
